@startuml


abstract class UnidadProtoss {
    - vida
    - escudo
    - tiempoConstruccion
    - costos
    - superficie: aire o tierra
    + construir()
    + ataque(Superficie, fila, columna)
}

class Zealot {
    +ataque()
}

class Dragon {
    +ataque()
}

class Scout {
   +ataque()

}



abstract class UnidadZerg {
    - vida
    - tiempoConstruccion
    - costos
    - superficie: aire o tierra
    + construir()
    + ataque(Superficie, fila, columna)
}

class AmoSupremo {

}

class Zangano {
    + recolectar()
}

class Zerling {
    + ataque()
}

class Hidralisco {

    +ataque()
}

class Mutalisco {
    +evolucionar()
    +ataque()
}

class Guardian {
    +ataque()
}

class Devorador {
    +ataque()
}

interface Atacador {
    +ataqueUnidad()
    +ataqueConstruccion()
}

class AtaqueTierra {
    +ataqueUnidad()
    +ataqueConstruccion()
}

class AtaqueAire {
    +ataqueUnidad()
    +ataqueConstruccion()
}

interface Defendible {
    +recibirDanio()
}

interface Invisiblibilidad {
}

interface Detector {
    +detectarUnidad()
}

interface Recolector {
    +recolectar()
}

UnidadZerg <|-- Zangano
UnidadZerg <|-- AmoSupremo
UnidadZerg <|-- Zerling
UnidadZerg <|-- Hidralisco
UnidadZerg <|-- Mutalisco
UnidadZerg <|-- Guardian
UnidadZerg <|-- Devorador

UnidadProtoss <|-- Zealot
UnidadProtoss <|-- Dragon
UnidadProtoss <|-- Scout

AmoSupremo *-- Detector

Zealot *-- Invisiblibilidad

Zerling *-- Atacador
Hidralisco *-- Atacador
Mutalisco *-- Atacador
Guardian *-- Atacador
Scout *-- Atacador
Dragon *-- Atacador
Devorador *-- Atacador
Zealot *-- Atacador

Zangano *-- Recolector

UnidadProtoss *-left- Defendible
UnidadZerg *- Defendible

Atacador <|.. AtaqueTierra
Atacador <|.. AtaqueAire


@enduml